<rdar://problem/11036900> and https://bugs.webkit.org/show_bug.cgi?id=81079 REGRESSION(r107844): Clipboard API only remembers most recent data set on clipboard

Reviewed by Sam Weinig.

Source/WebCore:

Test: editing/pasteboard/copy-two-pasteboard-types-both-work.html

Add the non-destructive "addTypes" to supplement the destructive "setTypes"
* platform/PasteboardStrategy.h:
(PasteboardStrategy):
* platform/PlatformPasteboard.h:
(PlatformPasteboard):
* platform/mac/PlatformPasteboardMac.mm:
(WebCore::PlatformPasteboard::addTypes):
* WebCore.exp.in:

* platform/mac/ClipboardMac.mm:
(WebCore::ClipboardMac::setData): Call the non-destructive "addTypes" instead of
  the destructive "setTypes"

Source/WebKit/mac:

Add the non-destructive "addTypes" to supplement the destructive "setTypes"
* WebCoreSupport/WebPlatformStrategies.h:
* WebCoreSupport/WebPlatformStrategies.mm:
(WebPlatformStrategies::addTypes):

Source/WebKit2:

Add the non-destructive "addTypes" to supplement the destructive "setTypes"

* UIProcess/WebContext.h:
* UIProcess/WebContext.messages.in:
* UIProcess/mac/WebContextMac.mm:
(WebKit::WebContext::addPasteboardTypes):

* WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:
(WebKit::WebPlatformStrategies::addTypes):
* WebProcess/WebCoreSupport/WebPlatformStrategies.h:

LayoutTests:

* editing/pasteboard/copy-two-pasteboard-types-both-work-expected.txt: Added.
* editing/pasteboard/copy-two-pasteboard-types-both-work.html: Added.

Canonical link: https://commits.webkit.org/98442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110880 268f45cc-cd09-0410-ab3c-d52691b4dbfc