Source/WebCore/platform/PasteboardStrategy.h
@@ -49,6 +49,7 @@ public:
     virtual Color color(const String& pasteboardName) = 0;
     
     virtual void copy(const String& fromPasteboard, const String& toPasteboard) = 0;
+    virtual void addTypes(const Vector<String>& pasteboardTypes, const String& pasteboardName) = 0;
     virtual void setTypes(const Vector<String>& pasteboardTypes, const String& pasteboardName) = 0;
     virtual void setBufferForType(PassRefPtr<SharedBuffer>, const String& pasteboardType, const String& pasteboardName) = 0;
     virtual void setPathnamesForType(const Vector<String>&, const String& pasteboardType, const String& pasteboardName) = 0;
