Source/WebKit2/WebProcess/WebCoreSupport/WebPlatformStrategies.h
@@ -72,6 +72,7 @@ private:
     virtual WebCore::Color color(const String& pasteboardName) OVERRIDE;
     
     virtual void copy(const String& fromPasteboard, const String& toPasteboard) OVERRIDE;
+    virtual void addTypes(const Vector<String>& pasteboardTypes, const String& pasteboardName) OVERRIDE;
     virtual void setTypes(const Vector<String>& pasteboardTypes, const String& pasteboardName) OVERRIDE;
     virtual void setBufferForType(PassRefPtr<WebCore::SharedBuffer>, const String& pasteboardType, const String& pasteboardName) OVERRIDE;
     virtual void setPathnamesForType(const Vector<String>&, const String& pasteboardType, const String& pasteboardName) OVERRIDE;
